# FEUP_Desenho_de_Algoritmos

./: gitignore.txt
P01/: answers.md
P01/TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  tests.cpp
P01/data_structures/: Graph.h
P02/da2324_p02_student/TP2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
P03/da2324_p03_student/TP3/: ex1.cpp  ex2.cpp
P04/da2324_p04_student/: CMakeLists.txt
P04/da2324_p04_student/TP4/: ex1.cpp  ex2.cpp
P05/da2324_p05_student/: CMakeLists.txt
P05/da2324_p05_student/TP5/: ex1.cpp  ex2.cpp  ex3.cpp  exercises.h  testAux.h
P05/da2324_p05_student/data_structures/: Graph.h
P06/da2324_p07_student/: CMakeLists.txt
P06/da2324_p07_student/TP7/: ex1.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  exercises.h
